--- a/app/static/css/components/_loginModal.less
+++ b/app/static/css/components/_loginModal.less
@@ -21,7 +21,7 @@
     }
 
     div.buttons .social-button {
-        display: block;
+        display: inline-block;
         margin: 0 20px 0 0;
         width: @img_button_size;
         height: @img_button_size;
